--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(portada1.jpg);
+  background-image: url(/portada1.jpg);
   min-height: 100vh;
   background-position: center;
   background-size: cover;
